# hearings-ai

./: .gitignore  AGENTS.md  ALLOWLIST.md  CHANGELOG.md  COPILOT.md  OPERATIONS.md  README.md
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/: clients.py  config.py  main.py  models.py
api/src/auth/: __init__.py
api/src/search/: service.py
infra/: main.bicep
infra/modules/: ai-search.bicep  cosmos.bicep  openai.bicep  storage.bicep
infra/parameters/: dev.bicepparam
scripts/: create-search-index.py  download-public-docs.py  generate-synthetic-docs.py  ingest-documents.py
test-data/documents/: download-50-docs.sh  download-more.sh
test-data/metadata/: sample-proceedings.json
web/: index.html  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Layout.tsx  ResultsList.tsx  SearchBar.tsx
web/src/hooks/: useSearch.ts
web/src/types/: index.ts
